--- a/ProjectEuler.Tests/ProjectEuler.Tests.csproj
+++ b/ProjectEuler.Tests/ProjectEuler.Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MultiplesOf3Or5.cs" />
+    <Compile Include="Problem2Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
